[project]
name = "pythonserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cloudinary>=1.44.0",
    "fastapi>=0.115.12",
    "flask>=3.1.0",
    "mutagen>=1.47.0",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "spotipy>=2.25.1",
    "uvicorn>=0.34.2",
    "youtube-search-python>=1.6.6",
    "yt-dlp>=2025.4.30",
]
